--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
-title: John Doe # your name (or website title) here
+title: Sina # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  In my final year of completing a Bachelour of Commerce majoring in Finance and Econmetrics at Monash Uniersity.  
   <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  Like working with data and financial instruments.
+
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
