--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Sina # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/face.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  In my final year of completing a Bachelour of Commerce majoring in Finance and Econmetrics at Monash Uniersity.  
+  In my final year of completing a Bachelor of Commerce majoring in Finance and Econometrics at Monash Uniersity.  
   <br><br>
   Like working with data and financial instruments.
 
