--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sina # your name (or website title) here
-logo: "/images/face.png?raw=true" # your photo (or logo) here
+logo: "/images/face.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   In my final year of completing a Bachelor of Commerce majoring in Finance and Econometrics at Monash Uniersity.  
   <br><br>
