--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Like working with data and financial instruments.
 
-  
+[Booklist)](sample_page.md)  
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
