--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/face.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   In my final year of completing a Bachelor of Commerce majoring in Finance and Econometrics at Monash Uniersity.  
   <br><br>
-  Like working with data and financial instruments.
+  I like working with data and financial instruments.
  
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
