--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,4 @@ description: > # your text below (remove <br> elements if you don't need line br
  
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+[Using AI to detect news sentiment to predict changes in stock prices](sample_page.md)
